--- a/prometheus/prometheus.service
+++ b/prometheus/prometheus.service
@@ -12,6 +12,6 @@ ExecStart=/usr/local/bin/prometheus \
     --storage.tsdb.path /var/lib/prometheus/ \
     --web.console.templates=/etc/prometheus/consoles \
     --web.console.libraries=/etc/prometheus/console_libraries
-
+    --web.listen-address=127.0.0.1:9090
 [Install]
 WantedBy=multi-user.target
