Update alertmanager and prometheus service files to include line continuation for better readability

--- a/alertmanager/alertmanager.service
+++ b/alertmanager/alertmanager.service
@@ -9,7 +9,7 @@ Group=alertmanager
 Type=simple
 ExecStart=/usr/local/bin/alertmanager \
     --config.file /etc/alertmanager/alertmanager.yml \
-    --storage.path /var/lib/alertmanager/data
+    --storage.path /var/lib/alertmanager/data \
     --web.listen-address=127.0.0.1:9093
 Restart=always
 
